# client

./: .gitignore  README.md  pyproject.toml
querius/: __init__.py  client.py  patch.py  secretmanager.py
tests/integration/: test_client_connection.py  test_query_route_and_log.py
tests/unit/: fake-service-account.json  test_client_initialisation.py  test_client_safe_and_quick.py
